--- a/Modul 3/Tipe Data/null.html
+++ b/Modul 3/Tipe Data/null.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Null</title>
 </head>
-<body bgColor="#808000">
+<body bgColor="#C5ADED">
 	<big>
 		<script type="text/javascript">
 			document.write("<em>null</em> adalah tipe " + typeof(null), "<br />");
