--- a/Modul 3/tugasmodul3/tugas1.html
+++ b/Modul 3/tugasmodul3/tugas1.html
@@ -8,10 +8,10 @@
     <h1>BIO SAYA</h1>
     
     <script>
-    let firstName = "Luthfi",
-        lastName = "Hasan",
-        age = 21,
-        isMarried = true;
+    let firstName = "Luthfi";
+    let lastName = "Hasan";
+    let age = 21;
+    let isMarried = false;
         
         document.writeln(firstName+"<br>");
         document.writeln(lastName+"<br>");
