--- a/Modul 3/Tipe Data/strings.html
+++ b/Modul 3/Tipe Data/strings.html
@@ -3,17 +3,17 @@
 <body>
 
 <h2>JavaScript Strings</h2>
-
 <h3><i>Tipe Data Strings</i></h3>
 
 <p id="demo"></p>
 
 <script>
+    document.write("<hr>");
 let carName1 = "Xiaomi Note 9";
 let carName2 = 'Xiaomi Note 9';
 
-document.getElementById("demo").innerHTML =
-carName1 + "<br>" + carName2; 
+document.write(carName1+"<br>")
+document.write(carName2+"<br>")
 </script>
 
 </body>
