--- a/Modul 2/company.profile/about.html
+++ b/Modul 2/company.profile/about.html
@@ -46,7 +46,7 @@
 	<!-- about -->
 	<section class="about">
 		<div class="container">
-			<img src="img/banner.jpg" width="100%">
+			<img src="img/c1080.png" width="100%">
 			<h3>ABOUT</h3>
 			<p><strong>Nama Lengkap : Luthfi Hasan</strong></p>
 			<p><strong>Nim : 2022010133</strong></p>
