--- a/Modul 4/Data Stuctur/spreadoperator.html
+++ b/Modul 4/Data Stuctur/spreadoperator.html
@@ -1,165 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #77226e;
-    }
+  <title>Tampilkan Data Array dengan Spread Operator</title>
+  <script>
+    window.onload = function() {
+      // Data array
+      const dataArray = ['Data 1', 'Data 2', 'Data 3', 'Data 4', 'Data 5'];
 
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      // Menampilkan data array ke dalam halaman web
+      const container = document.getElementById('data-container');
+      container.innerHTML = [...dataArray].join('<br>');
     }
-
-    h1 {
-      text-align: center;
-    }
-
-    .data-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-    }
-
-    .item {
-      width: 45%;
-      margin-bottom: 10px;
-      padding: 10px;
-      background-color: #f0f0f0;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    .item p {
-      margin: 0;
-    }
-
-    .add-form {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-top: 20px;
-    }
-
-    .add-form input[type="text"] {
-      flex-grow: 1;
-      padding: 5px;
-    }
-
-    .add-form button {
-      margin-left: 10px;
-      padding: 5px 10px;
-      background-color: #4caf50;
-      color: #fff;
-      border: none;
-      border-radius: 3px;
-      cursor: pointer;
-    }
-
-    .remove-form {
-      margin-top: 10px;
-      text-align: center;
-    }
-
-    .remove-form input[type="number"] {
-      padding: 5px;
-    }
-
-    .remove-form button {
-      margin-left: 10px;
-      padding: 5px 10px;
-      background-color: #f44336;
-      color: #fff;
-      border: none;
-      border-radius: 3px;
-      cursor: pointer;
-    }
-  </style>
+  </script>
 </head>
 <body>
-  <div class="container">
-    <h1>Data Teman dan Hobi</h1>
-    <div class="data-container">
-      <div class="item" id="name-list"></div>
-      <div class="item" id="hobby-list"></div>
-    </div>
-    <div class="add-form">
-      <input type="text" id="name-input" placeholder="Nama Teman">
-      <input type="text" id="hobby-input" placeholder="Hobi">
-      <button onclick="addData()">Tambah</button>
-    </div>
-    <div class="remove-form">
-      <input type="number" id="remove-input" placeholder="Indeks Data">
-      <button onclick="removeData()">Hapus</button>
-    </div>
-  </div>
-
-  <script>
-    // Array data nama teman
-    var namaTeman = ["Atta", "Hasan", "Zidhan"];
-
-    // Array data hobi
-    var dataHobi = ["Basket", "Voli", "Badminton"];
-
-    // Fungsi untuk menambahkan data teman dan hobi
-    function addData() {
-      var nameInput = document.getElementById("name-input");
-      var hobbyInput = document.getElementById("hobby-input");
-
-      var nameValue = nameInput.value;
-      var hobbyValue = hobbyInput.value;
-
-      namaTeman.push(nameValue);
-      dataHobi.push(hobbyValue);
-
-      nameInput.value = "";
-      hobbyInput.value = "";
-
-      displayData();
-    }
-
-    // Fungsi untuk menghapus data teman dan hobi
-    function removeData() {
-      var removeInput = document.getElementById("remove-input");
-      var index = removeInput.value;
-
-      if (index >= 0 && index < namaTeman.length) {
-        namaTeman.splice(index, 1);
-        dataHobi.splice(index, 1);
-
-        removeInput.value = "";
-
-        displayData();
-      }
-    }
-
-    // Fungsi untuk menampilkan data teman dan hobi
-    function displayData() {
-      var nameList = document.getElementById("name-list");
-      var hobbyList = document.getElementById("hobby-list");
-
-      nameList.innerHTML = "";
-      hobbyList.innerHTML = "";
-
-      for (var i = 0; i < namaTeman.length; i++) {
-        var nameItem = document.createElement("p");
-        nameItem.innerText = namaTeman[i];
-        nameList.appendChild(nameItem);
-
-        var hobbyItem = document.createElement("p");
-        hobbyItem.innerText = dataHobi[i];
-        hobbyList.appendChild(hobbyItem);
-      }
-    }
-
-    // Menampilkan data awal saat halaman dimuat
-    displayData();
-  </script>
+  <h1>Data Array</h1>
+  <div id="data-container"></div>
 </body>
 </html>
-
