--- a/app-hasan-uts/array.html
+++ b/app-hasan-uts/array.html
@@ -24,14 +24,21 @@
       <th>Handphone</th>
     </tr>
   </table>
-  <div class="table">
+  
   <form class="array" id="addForm">
+    <p>
     <input type="text" id="namaInput" placeholder="Nama Mahasiswa" required>
-    <input type="number" id="tahunInput" placeholder="Tahun Lahir" required>
+    </p>
+    <p>
+    <input type="text" id="tahunInput" placeholder="Tahun Lahir" required>
+    </p>
+    <p>
     <input type="text" id="handphoneInput" placeholder="Handphone" required>
+    </p>
+    <p>
     <input type="submit" value="Tambahkan">
+  </p>
   </form>
-  </div>
 
   <script src="array.js"></script>
 <body>
