--- a/app-hasan-uts/biodata.html
+++ b/app-hasan-uts/biodata.html
@@ -18,7 +18,7 @@
 <body>
   <h1>Biodata Saya</h1>
   <div class="biodata">
-<img class="fotoprofil" src="profil.jpg" alt="profile-pic">
+<img class="fotoprofil" src="toon.jpg" alt="profile-pic">
 <p>
   
 Nama : Luthfi Hasan
@@ -27,16 +27,13 @@ Nama : Luthfi Hasan
 Jenis Kelamin : Laki-Laki
 </p>
 <p>
-Tempat Tanggal Lahir : Jepara,01 Januari 2002
-</p>
-<p>
 Agama : Islam
 </p>
 <p>
 Alamat : Desa Jambu Barat, Kec Mlonggo Kab Jepara
 </p>
 <p>
-No Telp : 085713306112
+No Telp/ WhatsApp : 089531747332
 </p>   
 
 <br>
