--- a/app-hasan-uts/index.html
+++ b/app-hasan-uts/index.html
@@ -20,15 +20,15 @@
 <div class="content">
     <form id="input-form">
     <p>
-        <label for="nim">Masukkan NIM:</label>
+        <label for="nim">Masukkan NIM :</label>
         <input type="text" id="nim" name="nim">
     </p>
     <p>
-        <label for="nama">Masukkan Nama:</label>
+        <label for="nama">Masukkan Nama :</label>
         <input type="text" id="nama" name="nama">
     </p>
     <p> 
-        <label for="matkul">Mata Kuliah:</label>
+        <label for="matkul">Mata Kuliah :</label>
         <select id="matkul" name="matkul">
             <option value=""></option>
             <option value="Kalkulus 2">Kalkulus 2</option>
@@ -40,17 +40,17 @@
             <option value="Bahasa Indonesia">Bahasa Indonesia</option>
             <option value="Pemrograman Komputer 2">Pemrograman Komputer 2</option>
             <option value="Sistem Operasi">Sistem Operasi</option>
-            <option value="Praktik Komputer 2">Praktik Komputer 2</option>
+            <option value="Praktik Pemrograman Komputer 2">Praktik Pemrograman Komputer 2</option>
         </select>
     </p>
 
-        <label for="nilai">Nilai Akhir:</label>
+        <label for="nilai">Nilai Akhir :</label>
         <input type="text" id="nilai" name="nilai">
-        
-<p>
+    <p>
         <button type="button" onclick="tampilNilai()">Tampil</button>
         <button type="reset">Reset</button>
     </p>
+
     </form>
 </div>
     <div  id="result-hasil" class="hasil" style="display: none;" >
