--- a/game-hasan-uas/game5.html
+++ b/game-hasan-uas/game5.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="aset-game/game.css"/>
     <script src="aset-game/utility.js"></script>
-    <script src="aset-game/carikata2.js"></script>
+    <script src="aset-game/carikata5.js"></script>
   </head>
   <body>
     <div class="home">
@@ -16,28 +16,28 @@
     
     <div class="wrap">
       <h1 class="logo">Game Cari Kata</h1>
-      <h2 class="lvl">Level 2</h2>
+      <h2 class="lvl">Level 5</h2>
       <h3 class="user">Nama Pemain : <span id="player-name-display"></span></h3>
-      <h2 class="judul">Framework Javascript</h2>
+      <h2 class="judul">Operator Javascript</h2>
 
-      <script>
-        // Ambil nilai playerName dari local storage
-      var playerName = localStorage.getItem('playerName');
+    <script>
+      // Ambil nilai playerName dari local storage
+    var playerName = localStorage.getItem('playerName');
 
-        // Tampilkan nilai playerName di halaman
-      var playerNameElement = document.getElementById('player-name-display');
-      playerNameElement.textContent = playerName;
-      </script>
+      // Tampilkan nilai playerName di halaman
+    var playerNameElement = document.getElementById('player-name-display');
+    playerNameElement.textContent = playerName;
+    </script>
 
       <section id="ws-area"></section>
       <ul class="ws-words"></ul>
     </div>
-  
+    
     <script type="text/javascript">
       var gameAreaEl = document.getElementById('ws-area');
       var gameobj = gameAreaEl.wordSearch();
 
-      // Put words into `.ws-words`
+        // Put words into `.ws-words`
       var words = gameobj.settings.wordsList,
         wordsWrap = document.querySelector('.ws-words');
       for (i in words) {
