--- a/game-hasan-uas/index.html
+++ b/game-hasan-uas/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Utama</title>
+  <link rel="icon" href="foto/home.png"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="uas.css"/>
 </head>
@@ -16,17 +19,99 @@
   </header>
 
   <div class="content">
-    <h1 class="tagline"><span style="color:#090808;">Game</span> <span style="color:#F7E6C4;">Mencari</span> <span style="color:#111111;">Kata</span></h1>
+    <h1 class="tagline"><span style="color:#001C30;">Game</span> <span style="color:#176B87;">Mencari</span> <span style="color:#001C30;">Kata</span></h1>
     <p class="description">Permainan mencari kata tertentu yang ada di dalam kotak. Karena kata tersebut akan teracak dengan kata lain, maka kejelian dan ketelitian sangat dibutuhkan dalam menyelesaikan game ini.</p>
-    <img class="foto-profil" src="foto/tts.jpg" alt="Game Image">
+    <img class="foto-profil" src="foto/pandu.png" alt="Game Image">
 
-<!-- Input Nama Pemain -->
 <label class ="player-name">Nama Pemain :</label>
 <input class="text" id="player-name">
 
-<a href="game.html">
+<a href="game1.html">
   <button class="play" onclick="prevslide()"><i class="bi-controller"></i> Yok Bermainn</button>
 </a>
+
+<div class="container">
+  <div class="particles">
+    <span style="--i:1;"></span>
+    <span style="--i:1;"></span>
+    <span style="--i:1;"></span>
+    <span style="--i:1;"></span>
+    <span style="--i:1;"></span>
+    <span style="--i:1;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:10;"></span>
+    <span style="--i:4;"></span>
+    <span style="--i:2;"></span>
+    <span style="--i:5;"></span>
+    <span style="--i:4;"></span>    
+    <span style="--i:10;"></span>    
+    <span style="--i:7;"></span>
+    <span style="--i:9;"></span>
+    <span style="--i:5;"></span>
+    <span style="--i:11;"></span>
+    <span style="--i:1;"></span>
+    <span style="--i:2;"></span>
+    <span style="--i:11;"></span>
+    <span style="--i:4;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:9;"></span>
+    <span style="--i:6;"></span>
+    <span style="--i:5;"></span>
+    <span style="--i:8;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:10;"></span>
+    <span style="--i:2;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i: "></span>
+    <span style="--i:1;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:10;"></span>
+    <span style="--i:4;"></span>
+    <span style="--i:2;"></span>
+    <span style="--i:5;"></span>
+    <span style="--i:4;"></span>    
+    <span style="--i:10;"></span>    
+    <span style="--i:7;"></span>
+    <span style="--i:9;"></span>
+    <span style="--i:5;"></span>
+    <span style="--i:11;"></span>
+    <span style="--i:1;"></span>
+    <span style="--i:2;"></span>
+    <span style="--i:11;"></span>
+    <span style="--i:4;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:9;"></span>
+    <span style="--i:6;"></span>
+    <span style="--i:5;"></span>
+    <span style="--i:8;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:10;"></span>
+    <span style="--i:2;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:3;"></span>
+    <span style="--i:3;"></span>
+  </div>
+</div>
 
   <footer class="footer">
     <div class="social">
@@ -38,7 +123,6 @@
 
     <div class="profil">
       <a class="button" href="profil.html"><i class="bi-person-circle"></i> Profil Dev</a></div>
-
     <div class="copyright">
       &copy; Copyright 2023 - Luthfihasan.</div>
   </footer>
