--- a/game-hasan-uas/profil.html
+++ b/game-hasan-uas/profil.html
@@ -4,32 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil</title>
-    <link rel="stylesheet" href="profil.css">
-
-    <!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> -->
+    <link rel="icon" href="foto/user.png"/>
+    <link rel="stylesheet" href="aset-game/profil.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script> -->
-
 </head>
 <body>
     <header class="header">
       <a href="index.html"><i class="bi-house-fill"></i> Home</a></li>
-    
-        <a href="#" class="logo"><i class="bi-person-circle"></i> Profil Dev.</a>
-    
-        <!-- <nav class="navbar">
-            <a href="#" style="--i:1" class="active">Home</a>
-            <a href="#" style="--i:2" class="active">About</a>
-            <a href="#" style="--i:3" class="active">Portfolio</a>
-            <a href="#" style="--i:4" class="active">Contact</a>
-        </nav> -->
+        <a href="profil.html" class="logo"><i class="bi-person-circle"></i> Profil Dev.</a>
     </header>
    
     <section class="home">
         <div class="home-content">
             <h3>Halo, Nama Saya</h3>
             <h1>Luthfi Hasan</h1>
-            <!-- <h3>And I'm a <span class="text"></span></h3> -->
             <p>Saya Mahasiswa di Politeknik Balekambang Jepara.
                 <br>Prodi Rekayasa Perangkat Lunak.
                 <br>Asal Sekolah MA Mathalibul Huda Mlonggo.
@@ -46,8 +34,6 @@
         <div class="foto-container">
             <img class="foto" src="foto/toon.jpg" alt="foto">
           </div>
-
     </section>
-
 </body>
 </html>
