--- a/game-hasan-uas/game3.html
+++ b/game-hasan-uas/game3.html
@@ -14,6 +14,89 @@
       <a href="index.html"><i class="bi-house-fill"></i> Home</a>
     </div>
     
+    <div class="container">
+      <div class="particles">
+        <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:10;"></span>
+        <span style="--i:4;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:4;"></span>    
+        <span style="--i:10;"></span>    
+        <span style="--i:7;"></span>
+        <span style="--i:9;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:11;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:11;"></span>
+        <span style="--i:4;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:9;"></span>
+        <span style="--i:6;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:8;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:10;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i:1;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:10;"></span>
+        <span style="--i:4;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:4;"></span>    
+        <span style="--i:10;"></span>    
+        <span style="--i:7;"></span>
+        <span style="--i:9;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:11;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:11;"></span>
+        <span style="--i:4;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:9;"></span>
+        <span style="--i:6;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:8;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:10;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:3;"></span>
+      </div>
+    </div>
+
     <div class="wrap">
       <h1 class="logo">Game Cari Kata</h1>
       <h2 class="lvl">Level 3</h2>
