--- a/game-hasan-uas/game4.html
+++ b/game-hasan-uas/game4.html
@@ -6,12 +6,95 @@
     <link rel="icon" href="foto/game.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="aset-game/game.css"/>
-    <script src="aset-game/utility1.js"></script>
+    <script src="aset-game/utility.js"></script>
     <script src="aset-game/carikata4.js"></script>
   </head>
   <body>
     <div class="home">
       <a href="index.html"><i class="bi-house-fill"></i> Home</a>
+    </div>
+
+    <div class="container">
+      <div class="particles">
+        <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:10;"></span>
+        <span style="--i:4;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:4;"></span>    
+        <span style="--i:10;"></span>    
+        <span style="--i:7;"></span>
+        <span style="--i:9;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:11;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:11;"></span>
+        <span style="--i:4;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:9;"></span>
+        <span style="--i:6;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:8;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:10;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i: "></span>
+        <span style="--i:1;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:10;"></span>
+        <span style="--i:4;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:4;"></span>    
+        <span style="--i:10;"></span>    
+        <span style="--i:7;"></span>
+        <span style="--i:9;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:11;"></span>
+        <span style="--i:1;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:11;"></span>
+        <span style="--i:4;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:9;"></span>
+        <span style="--i:6;"></span>
+        <span style="--i:5;"></span>
+        <span style="--i:8;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:10;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:3;"></span>
+      </div>
     </div>
     
     <div class="wrap">
