--- a/game-hasan-uas/profil.html
+++ b/game-hasan-uas/profil.html
@@ -13,6 +13,89 @@
       <a href="index.html"><i class="bi-house-fill"></i> Home</a></li>
         <a href="profil.html" class="logo"><i class="bi-person-circle"></i> Profil Dev.</a>
     </header>
+
+    <div class="container">
+        <div class="particles">
+          <span style="--i:1;"></span>
+          <span style="--i:1;"></span>
+          <span style="--i:1;"></span>
+          <span style="--i:1;"></span>
+          <span style="--i:1;"></span>
+          <span style="--i:1;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:10;"></span>
+          <span style="--i:4;"></span>
+          <span style="--i:2;"></span>
+          <span style="--i:5;"></span>
+          <span style="--i:4;"></span>    
+          <span style="--i:10;"></span>    
+          <span style="--i:7;"></span>
+          <span style="--i:9;"></span>
+          <span style="--i:5;"></span>
+          <span style="--i:11;"></span>
+          <span style="--i:1;"></span>
+          <span style="--i:2;"></span>
+          <span style="--i:11;"></span>
+          <span style="--i:4;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:9;"></span>
+          <span style="--i:6;"></span>
+          <span style="--i:5;"></span>
+          <span style="--i:8;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:10;"></span>
+          <span style="--i:2;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i: "></span>
+          <span style="--i:1;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:10;"></span>
+          <span style="--i:4;"></span>
+          <span style="--i:2;"></span>
+          <span style="--i:5;"></span>
+          <span style="--i:4;"></span>    
+          <span style="--i:10;"></span>    
+          <span style="--i:7;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:5;"></span>
+          <span style="--i:11;"></span>
+          <span style="--i:1;"></span>
+          <span style="--i:2;"></span>
+          <span style="--i:10;"></span>
+          <span style="--i:4;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:9;"></span>
+          <span style="--i:6;"></span>
+          <span style="--i:5;"></span>
+          <span style="--i:8;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:10;"></span>
+          <span style="--i:2;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:3;"></span>
+          <span style="--i:3;"></span>
+        </div>
+      </div>
    
     <section class="home">
         <div class="home-content">
